[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://assets/gun.png" type="Texture" id=2]
[ext_resource path="res://source/player.gd" type="Script" id=3]
[ext_resource path="res://scenes/bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/dogica.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/shoot.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/light.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("gun_axis/Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gun_axis/Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "gun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("gun_axis/Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 0 ), Vector2( 18, -1 ), Vector2( 18, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "gun_reload"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("gun_axis/Sprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("gun_axis/Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 18, -1 ), Vector2( 15, -1 ), Vector2( 18, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gun_axis/Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -15.0, -20.0, -10.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, -5.0 ]
}

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=9]
resource_name = "ded"
tracks/0/type = "value"
tracks/0/path = NodePath("hud/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 3 )
bullet = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.0872665
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 4 )
shape = SubResource( 1 )

[node name="gun_axis" type="Node2D" parent="."]

[node name="Sprite2" type="Sprite" parent="gun_axis"]
position = Vector2( 15, -1 )
rotation = -0.261799
texture = ExtResource( 2 )

[node name="position" type="Position2D" parent="gun_axis"]
position = Vector2( 15.9417, -1.36481 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "gun"
anims/RESET = SubResource( 10 )
anims/gun = SubResource( 3 )
anims/gun_reload = SubResource( 12 )
anims/shoot = SubResource( 4 )
anims/walk = SubResource( 11 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="hud"]
margin_left = 279.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 5 )
text = "76"

[node name="ColorRect" type="ColorRect" parent="hud"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 7 )
energy = 0.7
shadow_enabled = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/ded = SubResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
